--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 h1{
-    color:green;
+    color: green;
     font-family: sans-serif;
-    }
+}
+
 p{
-    color:coral;
+    color: coral;
     font-family: fantasy;
 }
 
 ul{
-    list-style-image: url(images/pointer-icon.png);
+    list-style-type: url('images/pointer-icon.png');
 }
+
 
 ol{
     list-style-type: upper-roman;
 }
-
 #menu-bar a{
     font-family: Helvetica, sans-serif;
     text-decoration: none;
@@ -23,7 +24,6 @@ ol{
 }
 
 #menu-bar a:hover{
-background-color: aqua;
-color: #ffffff;
-
+    background-color: aqua;
+    color: #ffffff;
 }
